[gd_scene load_steps=8 format=2]

[ext_resource path="res://LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Level_4.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://PressurePlate.tscn" type="PackedScene" id=5]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Small_Font.tres" type="DynamicFont" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Base" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]

[node name="Platform2" parent="." instance=ExtResource( 6 )]
position = Vector2( 72, 136 )
scale = Vector2( 0.5, 1 )

[node name="Platform3" parent="." instance=ExtResource( 6 )]
position = Vector2( 952, 224 )
scale = Vector2( 0.5, 1 )

[node name="Platform4" parent="." instance=ExtResource( 6 )]
position = Vector2( 520, 104 )
scale = Vector2( 0.5, 1 )

[node name="Platform5" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 368 )
scale = Vector2( 0.5, 1 )

[node name="Platform6" parent="." instance=ExtResource( 6 )]
position = Vector2( 192, 512 )
scale = Vector2( 0.2, 1 )

[node name="Platform7" parent="." instance=ExtResource( 6 )]
position = Vector2( 504, 328 )
scale = Vector2( 0.2, 1 )

[node name="Platform8" parent="." instance=ExtResource( 6 )]
position = Vector2( 720, 280 )
scale = Vector2( 0.2, 1 )

[node name="Platform9" parent="." instance=ExtResource( 6 )]
position = Vector2( 600, 216 )
scale = Vector2( 0.2, 1 )

[node name="Platform10" parent="." instance=ExtResource( 6 )]
position = Vector2( 336, 408 )
scale = Vector2( 0.2, 1 )

[node name="Platform11" parent="." instance=ExtResource( 6 )]
position = Vector2( 224, 312 )
scale = Vector2( 0.2, 1 )

[node name="Platform12" parent="." instance=ExtResource( 6 )]
position = Vector2( 368, 216 )
scale = Vector2( 0.2, 1 )

[node name="Platform13" parent="." instance=ExtResource( 6 )]
position = Vector2( 240, 136 )
scale = Vector2( 0.2, 1 )

[node name="Platform14" parent="." instance=ExtResource( 6 )]
position = Vector2( 768, 144 )
scale = Vector2( 0.2, 1 )

[node name="Wall1" parent="." instance=ExtResource( 6 )]
position = Vector2( 800, 552 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="Wall2" parent="." instance=ExtResource( 6 )]
position = Vector2( 840, 552 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="Wall3" parent="." instance=ExtResource( 6 )]
position = Vector2( 880, 552 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="Wall4" parent="." instance=ExtResource( 6 )]
position = Vector2( 920, 552 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="Platform" parent="." instance=ExtResource( 6 )]
position = Vector2( 920, 512 )

[node name="Button" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 552 )

[node name="PressurePlate" parent="." instance=ExtResource( 5 )]
position = Vector2( 72, 128 )

[node name="PressurePlate2" parent="." instance=ExtResource( 5 )]
position = Vector2( 64, 360 )

[node name="PressurePlate3" parent="." instance=ExtResource( 5 )]
position = Vector2( 520, 96 )

[node name="PressurePlate4" parent="." instance=ExtResource( 5 )]
position = Vector2( 952, 216 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 72, 584 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Popup"]
margin_left = -344.0
margin_top = 136.0
margin_right = 1373.0
margin_bottom = 269.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nice! You're 
doing great!"
align = 1

[node name="Button" type="Button" parent="Popup"]
margin_left = 224.0
margin_top = 304.0
margin_right = 840.0
margin_bottom = 503.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NEXT LEVEL"
[connection signal="pressed" from="Popup/Button" to="." method="_on_Button_pressed"]
